# stproject1

./: pyproject.toml
backend/: requirements.txt
backend/backend/: settings.py  urls.py
backend/stapp/: models.py  urls.py  views.py
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
frontend/attached_assets/: Satta_King_Complete_Documentation_Final.docx
frontend/src/: App.css  App.jsx  index.css  test.html
frontend/src/api/: axiosSetup.js
frontend/src/components/: GameAnimations.css  GameAnimations.jsx
frontend/src/components/Admin/: AdminDashboard.css  AdminDashboard.jsx  AdminLogin.css  AdminLogin.jsx
frontend/src/components/Admin/Panels/: AnalyticsPanel.jsx  BetRecordsPanel.jsx  DeclareResultPanel.jsx  DepositRequestPanel.jsx  GamesPanel.jsx  TransactionsPanel.jsx  UserDetails.jsx  UsersPanel.jsx  WithdrawRequestPanel.jsx  panels.css
frontend/src/components/AgeVerification/: AgeVerification.css  AgeVerification.jsx
frontend/src/components/AuthGuard/: AuthGuard.css  AuthGuard.jsx
frontend/src/components/Boxes/: Boxes.css  Boxes.jsx
frontend/src/components/Footer/: Footer.css  Footer.jsx
frontend/src/components/GameTimeTable/: GameTimeTable.css  GameTimeTable.jsx
frontend/src/components/WhatsAppButton/: WhatsAppButton.css  WhatsAppButton.jsx
frontend/src/components/header/: Header.css  Header.jsx
frontend/src/components/pages/Auth/: Auth.css  (+2 more)
frontend/src/components/top-section/: Top_Section.jsx  Top_section.css
frontend/src/components/utils/: adminAxios.js  api.js
frontend/src/utils/: validation.js
(+39 files in other folders)
